# rustweb

./: .env  .gitignore  Cargo.toml  Readme.md
src/: db.rs  main.rs
src/config/: mod.rs
src/controllers/: mod.rs  user_controller.rs
src/models/: mod.rs  posts.rs  prelude.rs  test.rs  user.rs
src/repositories/: mod.rs  user_repository.rs
src/services/: mod.rs  user_service.rs
