[package]
name = "rustweb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.41.1", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }  # 用于加载环境变量配置
sea-orm = { version = "1.1.0", features = ["sqlx-mysql", "runtime-tokio", "macros"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "mysql"] }